deployments/media-queue/media-client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scalability-tester-media-ingress
  namespace: validation
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host:
    http:
      paths:
      - backend:
          service:
            name: scalability-tester-client-media
            port:
              number: 9996
        path: /scalability-tester-media/(.*)
        pathType: Prefix
  ingressClassName: nginx
